(info)pulling the submodule of ice from its own fork

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "modules/ice"]
 	path = modules/ice
-	url = https://github.com/Yrod0200/ice.git
+	url = https://github.com/Emanuel71836/ice-igloo.git
